@@ -17,6 +17,7 @@ NEWS
   * print backtrace in assert logging with libunwind
   * major refactoring of internal buffer/chunk handling
   * [mod_auth] use crypt_r instead of crypt if available
+  * fix error message for T_CONFIG_ARRAY config values if an entry value is not a string
 
 - 1.4.35 - 2014-03-12
   * [network/ssl] fix build error if TLSEXT is disabled
